2005-09-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c term/gd.trm: Always allow animated gif options in
	'set term gif ...'. Issue a warning if the gd library does not support
	animated gifs.

2005-09-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary do_plot label_width): Correct the layout
	of the key title area for enhanced text super- and sub- scripts, and
	ensure the box is wide enough for the key title string.
	Bug/RFE #1002488.

	NB: This fix reveals that the x11 driver has incorrect vertical
	centering for enhanced text; other drivers are fine.

	* term/xlib.trm: Add enhanced text entry points to TERM_TABLE so that
	enhanced text handling by x11 driver can be debugged.

2005-09-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm (SVG_init): Place encoding information in the 
	XML header record if an encoding is explicitly set in gnuplot.
	Bug #1231209.

	* src/axis.c (gen_tics): Correct the calculation of last minitic
	position to be plotted on a log-scale axis. Bug #1223149.

	* src/term.c (write_multiline): Fix trivial line-counting bug.

2005-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (parse_label_options): Fix incorrect ordering of
	declaration/initialization. Non-gcc compilers didn't like it.

2005-09-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Allow space for zeroaxis tic labels when
	zeroaxis is near plot border.  Bug #219867 swatted after 5 years!

2005-09-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics add_tic_user) src/axis.h src/save.c (save_tics)
	src/setc.c (set_tic_prop load_tic_user load_tic_series)
	src/show.c (show_ticdef) src/unset.c (unset_tics) docs/gnuplot.doc:

	Sourceforge patchset #1104018.
	Allow both user-specified axis tics and auto-generated tics at the
	same time.  No change to basic syntax or behaviour of tics, but the
	extra key word "add" in a "set [xuz]tics ..." command causes the